# crc-signature

./: .clang-format  .gitmodules  32bit.dockerfile  CMakeLists.txt  Dockerfile
src/: cli.cpp  signature.cpp  signature.h
